Clases, herencia, encapsulamiento

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /java/mi_app/build/
 /java/mi_app/nbproject/private/
 /java/EscuelaDigital/nbproject/private/
+/java/clase2Java/nbproject/private/
+/java/clase2Java/build/
+/java/clase3Java/nbproject/private/
+/java/clase3Java/build/
